Refactored login/register with Github/Twitter
